Update gradle to stable
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         maven { url "http://dl.bintray.com/davideas/maven" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-rc2'
+        classpath 'com.android.tools.build:gradle:3.0.0'
         classpath 'eu.davidea:grabver:0.6.0'
 
         // NOTE: Do not place your application dependencies here; they belong
