--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 apply plugin: 'eu.davidea.grabver'
 
 versioning {
@@ -118,6 +119,7 @@ dependencies {
     compile 'com.github.bumptech.glide:okhttp3-integration:4.2.0@aar'
 
     implementation 'org.webrtc:google-webrtc:1.0.+'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation ('com.android.support.test.espresso:espresso-core:3.0.1', {
