--- a/app/build.gradle
+++ b/app/build.gradle
@@ -134,3 +134,5 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 }
+
+apply plugin: 'com.google.gms.google-services'
