--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,6 @@ versioning {
     //preRelease "rc1"
 }
 
-// For maven repository
 version = versioning.name
 
 android {
@@ -16,10 +15,9 @@ android {
     buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.nextcloud.talk"
+        versionName version
         minSdkVersion 21
         targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         // Enabling multidex support.
@@ -58,14 +56,22 @@ ext {
     googleLibraryVersion = '11.4.2'
 }
 
+
+configurations.all {
+    resolutionStrategy {
+        force "com.android.support:cardview-v7:${supportLibraryVersion}"
+        force "com.android.support:preference-v7:${supportLibraryVersion}"
+    }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:${supportLibraryVersion}"
     implementation "com.android.support:design:${supportLibraryVersion}"
     implementation 'com.android.support:multidex:1.0.2'
 
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile "io.reactivex.rxjava2:rxjava:2.1.4"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation "io.reactivex.rxjava2:rxjava:2.1.4"
 
     implementation 'com.bluelinelabs:conductor:2.1.4'
     implementation 'com.bluelinelabs:conductor-support:2.1.4'
@@ -78,7 +84,7 @@ dependencies {
     annotationProcessor 'com.bluelinelabs:logansquare-compiler:1.3.7'
 
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     implementation 'com.github.aurae.retrofit2:converter-logansquare:1.4.1'
 
     implementation 'com.google.dagger:dagger:2.8'
@@ -88,37 +94,36 @@ dependencies {
 
     implementation 'org.greenrobot:eventbus:3.0.0'
 
-    compile 'io.requery:requery:1.4.0'
-    compile 'io.requery:requery-android:1.4.0'
-    compile 'net.zetetic:android-database-sqlcipher:3.5.7'
-    annotationProcessor 'io.requery:requery-processor:1.4.0'
+    implementation 'io.requery:requery:1.4.1'
+    implementation 'io.requery:requery-android:1.4.1'
+    implementation 'net.zetetic:android-database-sqlcipher:3.5.7'
+    annotationProcessor 'io.requery:requery-processor:1.4.1'
 
     compile 'org.parceler:parceler-api:1.1.9'
     annotationProcessor 'org.parceler:parceler:1.1.9'
 
-    compile 'net.orange-box.storebox:storebox-lib:1.4.0'
+    implementation 'net.orange-box.storebox:storebox-lib:1.4.0'
 
     compileOnly "org.projectlombok:lombok:1.16.18"
     annotationProcessor "org.projectlombok:lombok:1.16.18"
 
-    compile 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.4'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
 
-    compile "javax.transaction:transaction-api:1.1-rev-1"
+    implementation "javax.transaction:transaction-api:1.1-rev-1"
 
-    compile 'com.github.HITGIF:TextFieldBoxes:1.3.4'
+    implementation 'com.github.HITGIF:TextFieldBoxes:1.3.4'
 
-    compile 'eu.davidea:flexible-adapter:5.0.0-rc2'
+    implementation 'eu.davidea:flexible-adapter:5.0.0-rc2'
 
-    compile 'cn.carbs.android:AvatarImageView:1.0.4'
+    implementation 'cn.carbs.android:AvatarImageView:1.0.4'
 
-    compile 'com.github.bumptech.glide:glide:4.2.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
-    compile 'com.github.bumptech.glide:okhttp3-integration:4.2.0@aar'
-
+    implementation 'com.github.bumptech.glide:glide:4.3.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.0'
+    implementation 'com.github.bumptech.glide:okhttp3-integration:4.3.0@aar'
     implementation 'org.webrtc:google-webrtc:1.0.+'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}"
 
@@ -130,6 +135,8 @@ dependencies {
     implementation "com.google.firebase:firebase-core:${googleLibraryVersion}"
 
     implementation 'com.yarolegovich:lovely-dialog:1.0.7'
+    implementation 'com.yarolegovich:lovelyinput:1.0.2'
+    implementation 'com.yarolegovich:mp:1.0.8'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation ('com.android.support.test.espresso:espresso-core:3.0.1', {
