--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,13 +11,13 @@ versioning {
 version = versioning.name
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.0'
     defaultConfig {
         applicationId "com.nextcloud.talk"
         versionName version
         minSdkVersion 21
-        targetSdkVersion 26
+        targetSdkVersion 27
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         // Enabling multidex support.
@@ -52,7 +52,7 @@ android {
 }
 
 ext {
-    supportLibraryVersion = '26.1.0'
+    supportLibraryVersion = '27.0.0'
     googleLibraryVersion = '11.6.0'
 }
 
@@ -140,6 +140,8 @@ dependencies {
 
     implementation 'ru.alexbykov:nopermission:1.1.1'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
+
+    implementation 'com.github.Kennyc1012:BottomSheet:2.4.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation ('com.android.support.test.espresso:espresso-core:3.0.1', {
