--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:${supportLibraryVersion}"
     implementation "com.android.support:design:${supportLibraryVersion}"
+    implementation "com.android.support:percent:${supportLibraryVersion}"
+
     implementation 'com.android.support:multidex:1.0.2'
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
