--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
         <activity
             android:name=".activities.CallActivity"
             android:launchMode="singleTask"
+            android:configChanges="orientation|screenSize"
             />
 
 
