--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,7 +126,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.3.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.0'
     implementation 'com.github.bumptech.glide:okhttp3-integration:4.3.0@aar'
-    implementation 'org.webrtc:google-webrtc:1.0.+'
+    implementation 'org.webrtc:google-webrtc:1.0.21217'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}"
 
     implementation 'com.evernote:android-job:1.2.0'
@@ -140,7 +140,8 @@ dependencies {
     implementation 'com.yarolegovich:lovelyinput:1.0.2'
     implementation 'com.yarolegovich:mp:1.0.8'
 
-    implementation 'ru.alexbykov:nopermission:1.1.1'
+    implementation 'me.zhanghai.android.effortlesspermissions:library:1.0.2'
+
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
 
     implementation 'com.github.Kennyc1012:BottomSheet:2.4.0'
