--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,7 +115,7 @@ dependencies {
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.4'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
 
-    implementation "javax.transaction:transaction-api:1.1-rev-1"
+    debugImplementation "javax.transaction:transaction-api:1.1-rev-1"
 
     implementation 'com.github.HITGIF:TextFieldBoxes:1.3.4'
 
