--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,7 @@
           package="com.nextcloud.talk">
 
     <uses-feature android:name="android.hardware.camera.any"/>
-    <uses-feature android:name="android.hardware.camera.autofocus"/>
-    <uses-feature android:name="android.hardware.camera2"/>
+    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true"/>
