--- a/app/build.gradle
+++ b/app/build.gradle
@@ -141,6 +141,8 @@ dependencies {
 
     implementation 'com.github.Kennyc1012:BottomSheet:2.4.0'
 
+    implementation 'com.google.android:flexbox:0.3.1'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation ('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
