--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,12 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="com.nextcloud.talk">
 
-    <uses-feature android:name="android.hardware.camera.any" android:required="false"/>
-    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
+    <uses-feature
+        android:name="android.hardware.camera.any"
+        android:required="false"/>
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
+        android:required="false"/>
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true"/>
@@ -19,15 +23,16 @@
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
-        tools:replace="label, icon, theme, name, allowBackup"
         android:name=".application.NextcloudTalkApplication"
         android:allowBackup="true"
         android:fullBackupContent="@xml/backup_config"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/nc_app_name"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:replace="label, icon, roundIcon, theme, name, allowBackup">
 
         <activity
             android:name=".activities.MainActivity"
@@ -42,8 +47,8 @@
 
         <activity
             android:name=".activities.CallActivity"
-            android:launchMode="singleTask"
             android:configChanges="orientation|screenSize"
+            android:launchMode="singleTask"
             />
 
         <service
