--- a/app/build.gradle
+++ b/app/build.gradle
@@ -130,7 +130,8 @@ dependencies {
     implementation "com.google.firebase:firebase-core:${googleLibraryVersion}"
 
     implementation 'com.yarolegovich:lovely-dialog:1.0.7'
-    implementation 'com.github.mario:MaterialPreferences:master-SNAPSHOT'
+    implementation 'com.yarolegovich:lovelyinput:1.0.2'
+    implementation 'com.yarolegovich:mp:1.0.8'
 
     implementation 'me.zhanghai.android.effortlesspermissions:library:1.0.2'
 
