--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,7 +111,7 @@ dependencies {
 
     debugImplementation "javax.transaction:transaction-api:1.1-rev-1"
 
-    implementation 'com.github.HITGIF:TextFieldBoxes:1.3.8'
+    implementation 'com.github.HITGIF:TextFieldBoxes:1.3.9'
 
     implementation 'eu.davidea:flexible-adapter:5.0.0-rc4'
     implementation 'eu.davidea:flexible-adapter-ui:1.0.0-b1'
@@ -138,6 +138,7 @@ dependencies {
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
 
     implementation 'com.github.Kennyc1012:BottomSheet:2.4.0'
+    implementation 'eu.davidea:flipview:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation ('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
