--- a/app/build.gradle
+++ b/app/build.gradle
@@ -125,7 +125,6 @@ dependencies {
 
     implementation 'com.evernote:android-job:1.2.4'
 
-    implementation "com.google.android.gms:play-services-gcm:${googleLibraryVersion}"
     implementation "com.google.firebase:firebase-messaging:${googleLibraryVersion}"
 
     implementation 'com.yarolegovich:lovely-dialog:1.1.0'
@@ -143,5 +142,4 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 }
-
-apply plugin: 'com.google.gms.google-services'
+//apply plugin: 'com.google.gms.google-services'
