Forgot to add things
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,7 +60,7 @@
             android:name=".activities.CallActivity"
             android:configChanges="orientation|screenSize"
             android:launchMode="singleTask"
-            />
+            android:noHistory="true"/>
 
     </application>
 </manifest>
