--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,7 +123,7 @@ dependencies {
 
     implementation 'com.github.HITGIF:TextFieldBoxes:1.4.1'
 
-    implementation 'eu.davidea:flexible-adapter:5.0.0-rc4'
+    implementation 'eu.davidea:flexible-adapter:5.0.0'
     implementation 'eu.davidea:flexible-adapter-ui:1.0.0-b2'
 
     implementation 'com.github.bumptech.glide:glide:4.3.0'
