--- a/app/build.gradle
+++ b/app/build.gradle
@@ -148,6 +148,8 @@ dependencies {
 
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
 
+    implementation 'com.github.wooplr:Spotlight:1.2.3'
+
     implementation 'com.github.Kennyc1012:BottomSheet:2.4.0'
     implementation 'eu.davidea:flipview:1.1.3'
     testImplementation 'junit:junit:4.12'
