Fix a bug with callactivity history
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,8 +59,7 @@
         <activity
             android:name=".activities.CallActivity"
             android:configChanges="orientation|screenSize"
-            android:launchMode="singleTask"
-            android:noHistory="true"/>
+            android:launchMode="singleTask"/>
 
     </application>
 </manifest>
