--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,8 @@ android {
         targetSdkVersion 27
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-        versionCode 29
-        versionName "1.1.0beta4"
+        versionCode 30
+        versionName "1.1.0"
 
         flavorDimensions "default"
 
