Set versionName to 1.1.1
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         versionCode 31
-        versionName "1.2.0beta"
+        versionName "1.1.1"
 
         flavorDimensions "default"
 
