--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,7 @@ android {
 }
 
 ext {
-    supportLibraryVersion = '27.1.0'
+    supportLibraryVersion = '27.1.1'
 }
 
 
@@ -83,7 +83,7 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation "io.reactivex.rxjava2:rxjava:2.1.4"
+    implementation "io.reactivex.rxjava2:rxjava:2.1.7"
 
     implementation 'com.bluelinelabs:conductor:2.1.4'
     implementation 'com.bluelinelabs:conductor-support:2.1.4'
@@ -99,17 +99,19 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     implementation 'com.github.aurae.retrofit2:converter-logansquare:1.4.1'
 
-    implementation 'com.google.dagger:dagger:2.8'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.8'
+    implementation 'com.google.dagger:dagger:2.9'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
     implementation 'com.github.lukaspili.autodagger2:autodagger2:1.1'
     annotationProcessor 'com.github.lukaspili.autodagger2:autodagger2-compiler:1.1'
 
+    compileOnly 'javax.annotation:jsr250-api:1.0' // Android only
+
     implementation 'org.greenrobot:eventbus:3.0.0'
 
-    implementation 'io.requery:requery:1.5.0'
-    implementation 'io.requery:requery-android:1.5.0'
+    implementation 'io.requery:requery:1.5.1'
+    implementation 'io.requery:requery-android:1.5.1'
     implementation 'net.zetetic:android-database-sqlcipher:3.5.9'
-    annotationProcessor 'io.requery:requery-processor:1.5.0'
+    annotationProcessor 'io.requery:requery-processor:1.5.1'
 
     implementation 'org.parceler:parceler-api:1.1.9'
     annotationProcessor 'org.parceler:parceler:1.1.9'
@@ -124,8 +126,6 @@ dependencies {
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
-
-    debugImplementation "javax.transaction:transaction-api:1.1-rev-1"
 
     implementation 'com.github.HITGIF:TextFieldBoxes:1.4.3'
 
