--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,8 @@ android {
         targetSdkVersion 27
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-        versionCode 34
-        versionName "1.2.0"
+        versionCode 35
+        versionName "1.2.0beta2"
 
         flavorDimensions "default"
 
