--- a/app/build.gradle
+++ b/app/build.gradle
@@ -155,6 +155,8 @@ dependencies {
 
     implementation 'com.github.Kennyc1012:BottomSheet:2.4.0'
     implementation 'eu.davidea:flipview:1.1.3'
+    implementation 'com.webianks.library:popup-bubble:1.0.5'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation ('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
