--- a/app/src/gplay/AndroidManifest.xml
+++ b/app/src/gplay/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/AppTheme"
         tools:replace="label, icon, roundIcon, theme, name, allowBackup">
 
+        <meta-data android:name="firebase_analytics_collection_deactivated" android:value="true" />
+        <meta-data android:name="google_analytics_adid_collection_enabled" android:value="false" />
+        
         <service
             android:name=".services.firebase.MagicFirebaseMessagingService">
             <intent-filter>
