--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         versionCode 38
-        versionName "2.0.0"
+        versionName "2.0.0beta5"
 
         flavorDimensions "default"
 
