--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,8 @@ android {
         targetSdkVersion 27
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-        versionCode 38
-        versionName "2.0.0beta5"
+        versionCode 39
+        versionName "2.0.0"
 
         flavorDimensions "default"
 
