--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,8 @@ android {
         targetSdkVersion 27
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-        versionCode 39
-        versionName "2.0.0"
+        versionCode 40
+        versionName "2.0.1beta1"
 
         flavorDimensions "default"
 
