--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
-    <uses-permission android:name="android.permission.BATTERY_STATS"/>
+
     <uses-permission
         android:name="android.permission.USE_CREDENTIALS"
         android:maxSdkVersion="22"/>
@@ -44,6 +44,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="label, icon, roundIcon, theme, name, allowBackup">
+
+
+        <meta-data android:name="android.max_aspect" android:value="10" />
 
         <activity
             android:name=".activities.MainActivity"
