--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,8 @@ android {
         targetSdkVersion 27
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-        versionCode 41
-        versionName "2.0.1beta2"
+        versionCode 42
+        versionName "2.0.1"
 
         flavorDimensions "default"
 
