--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,8 +79,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:${supportLibraryVersion}"
     implementation "com.android.support:design:${supportLibraryVersion}"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.1'
-
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation "android.arch.lifecycle:extensions:1.1.1"
 
     implementation 'com.android.support:multidex:1.0.3'
 
