--- a/app/gplay.gradle
+++ b/app/gplay.gradle
@@ -1,8 +1,4 @@
-ext {
-    googleLibraryVersion = '9.6.1'
-}
-
 dependencies {
-  implementation "com.google.android.gms:play-services-gcm:${googleLibraryVersion}"
-  implementation "com.google.firebase:firebase-messaging:${googleLibraryVersion}"
+  implementation "com.google.android.gms:play-services-gcm:15.0.1"
+  implementation "com.google.firebase:firebase-messaging:17.1.0"
 }
