--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,8 @@ android {
         targetSdkVersion 27
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-        versionCode 48
-        versionName "2.1.0beta5"
+        versionCode 49
+        versionName "2.1.0"
 
         flavorDimensions "default"
 
