--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,8 @@ dependencies {
     implementation "com.android.support:appcompat-v7:${supportLibraryVersion}"
     implementation "com.android.support:design:${supportLibraryVersion}"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation "com.android.support:support-emoji-bundled:${supportLibraryVersion}"
+
     implementation "android.arch.lifecycle:extensions:1.1.1"
 
     implementation 'com.android.support:multidex:1.0.3'
