--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,15 @@
 buildscript {
 
     ext {
-        kotlinVersion = '1.2.31'
+        kotlinVersion = '1.2.41'
     }
 
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://jitpack.io'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
