--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ android {
 
 ext {
     supportLibraryVersion = '27.1.1'
+    workVersion = "1.0.0-alpha06"
 }
 
 
@@ -84,6 +85,9 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation "com.android.support:support-emoji-bundled:${supportLibraryVersion}"
     implementation "com.android.support:palette-v7:${supportLibraryVersion}"
+    implementation "android.arch.work:work-runtime:${workVersion}"
+    implementation "android.arch.work:work-firebase:${workVersion}"
+    androidTestImplementation "android.arch.work:work-testing:${workVersion}"
 
     implementation "android.arch.lifecycle:extensions:1.1.1"
 
