--- a/.drone.yml
+++ b/.drone.yml
@@ -1,23 +1,23 @@
 pipeline:
   compile:
-    image: nextcloudci/android:android-33
+    image: nextcloudci/android:android-35
     commands:
       # build app and assemble APK
-      - sh -c "if [ '${FLAVOR}' != 'Lint' ]; then ./gradlew assemble${FLAVOR}; fi"
+      - sh -c "if [ '${FLAVOR}' != 'Analysis' ]; then ./gradlew assemble${FLAVOR}; fi"
     when:
       matrix:
         FLAVOR: [Generic, Gplay]
 
-  lint:
-    image: nextcloudci/android:android-33
+  analysis:
+    image: nextcloudci/android:android-37
     commands:
-      - export BRANCH=$(scripts/lint/getBranchName.sh $GIT_USERNAME $GIT_TOKEN $DRONE_PULL_REQUEST)
-      - scripts/lint/lint-up-wrapper.sh $GIT_USERNAME $GIT_TOKEN $BRANCH $LOG_USERNAME $LOG_PASSWORD $DRONE_BUILD_NUMBER
+      - export BRANCH=$(scripts/analysis/getBranchName.sh $GIT_USERNAME $GIT_TOKEN $DRONE_PULL_REQUEST)
+      - scripts/analysis/analysis-wrapper.sh $GIT_USERNAME $GIT_TOKEN $BRANCH $LOG_USERNAME $LOG_PASSWORD $DRONE_BUILD_NUMBER $DRONE_PULL_REQUEST
     secrets: [ GIT_USERNAME, GIT_TOKEN, LOG_USERNAME, LOG_PASSWORD ]
     when:
       matrix:
-        FLAVOR: Lint
-
+        FLAVOR: Analysis
+        
   notify:
       image: drillster/drone-email
       host: $EMAIL_HOST
@@ -37,6 +37,6 @@ matrix:
   FLAVOR:
     - Generic
     - Gplay
-    - Lint
+    - Analysis
 
 branches: master
