--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,7 +89,7 @@ android {
 
 ext {
     supportLibraryVersion = '27.1.1'
-    workVersion = "1.0.0-alpha06"
+    workVersion = "1.0.0-alpha09"
 }
 
 
@@ -105,7 +105,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:${supportLibraryVersion}"
     implementation "com.android.support:design:${supportLibraryVersion}"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation "com.android.support:support-emoji-bundled:${supportLibraryVersion}"
     implementation "com.android.support:palette-v7:${supportLibraryVersion}"
     implementation "android.arch.work:work-runtime:${workVersion}"
@@ -116,44 +116,44 @@ dependencies {
 
     implementation 'com.android.support:multidex:1.0.3'
 
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation "io.reactivex.rxjava2:rxjava:2.1.7"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation "io.reactivex.rxjava2:rxjava:2.2.2"
 
-    implementation 'com.bluelinelabs:conductor:2.1.4'
-    implementation 'com.bluelinelabs:conductor-support:2.1.4'
+    implementation 'com.bluelinelabs:conductor:2.1.5'
+    implementation 'com.bluelinelabs:conductor-support:2.1.5'
 
-    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
-    implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.9.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.11.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
 
     implementation 'com.bluelinelabs:logansquare:1.3.7'
     annotationProcessor 'com.bluelinelabs:logansquare-compiler:1.3.7'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     implementation 'com.github.aurae.retrofit2:converter-logansquare:1.4.1'
 
-    implementation 'com.google.dagger:dagger:2.11'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
+    implementation 'com.google.dagger:dagger:2.17'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.17'
     implementation 'com.github.lukaspili.autodagger2:autodagger2:1.1'
     annotationProcessor 'com.github.lukaspili.autodagger2:autodagger2-compiler:1.1'
 
     compileOnly 'javax.annotation:jsr250-api:1.0' // Android only
 
-    implementation 'org.greenrobot:eventbus:3.0.0'
+    implementation 'org.greenrobot:eventbus:3.1.1'
 
     implementation 'io.requery:requery:1.5.1'
     implementation 'io.requery:requery-android:1.5.1'
     implementation 'net.zetetic:android-database-sqlcipher:3.5.9'
     annotationProcessor 'io.requery:requery-processor:1.5.1'
 
-    implementation 'org.parceler:parceler-api:1.1.9'
-    annotationProcessor 'org.parceler:parceler:1.1.9'
+    implementation 'org.parceler:parceler-api:1.1.11'
+    annotationProcessor 'org.parceler:parceler:1.1.11'
 
     implementation 'net.orange-box.storebox:storebox-lib:1.4.0'
 
-    compileOnly "org.projectlombok:lombok:1.16.18"
-    annotationProcessor "org.projectlombok:lombok:1.16.18"
+    compileOnly "org.projectlombok:lombok:1.18.2"
+    annotationProcessor "org.projectlombok:lombok:1.18.2"
 
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
@@ -163,13 +163,13 @@ dependencies {
 
     implementation 'com.github.HITGIF:TextFieldBoxes:1.4.3'
 
-    implementation 'eu.davidea:flexible-adapter:5.0.5'
-    implementation 'eu.davidea:flexible-adapter-ui:1.0.0-b5'
+    implementation 'eu.davidea:flexible-adapter:5.1.0'
+    implementation 'eu.davidea:flexible-adapter-ui:1.0.0'
 
-    implementation 'com.github.bumptech.glide:glide:4.7.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
-    implementation 'com.github.bumptech.glide:okhttp3-integration:4.7.1@aar'
-    implementation 'org.webrtc:google-webrtc:1.0.23295'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'com.github.bumptech.glide:okhttp3-integration:4.8.0@aar'
+    implementation 'org.webrtc:google-webrtc:1.0.24896'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}"
 
     implementation 'com.yarolegovich:lovely-dialog:1.1.0'
@@ -180,14 +180,14 @@ dependencies {
 
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
 
-    implementation 'com.github.wooplr:Spotlight:1.2.3'
+    implementation 'com.github.wooplr:Spotlight:1.3'
 
     implementation 'com.github.mario:ChatKit:64c1a2fee1'
 
     implementation 'com.otaliastudios:autocomplete:1.1.0'
 
-    implementation 'com.github.Kennyc1012:BottomSheet:2.4.0'
-    implementation 'eu.davidea:flipview:1.1.3'
+    implementation 'com.github.Kennyc1012:BottomSheet:2.4.1'
+    implementation 'eu.davidea:flipview:1.2.0'
     implementation 'com.webianks.library:popup-bubble:1.0.5'
 
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
