Speed up compile

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,7 @@ org.gradle.jvmargs=-XX:MaxHeapSize\=2048m -Xmx2048m
 # org.gradle.parallel=true
 android.useAndroidX=true
 android.enableJetifier=true
+
+# org.gradle.parallel=true
+org.gradle.daemon=true
+org.gradle.configureondemand=true
