More tweaks to gradle

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,13 +11,11 @@
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-XX:MaxHeapSize\=2048m -Xmx2048m
 
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
 android.useAndroidX=true
 android.enableJetifier=true
 
 # org.gradle.parallel=true
 org.gradle.daemon=true
 org.gradle.configureondemand=true
+org.gradle.caching=true
+org.gradle.parallel=true
