--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,8 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:replace="label, icon, theme, name, allowBackup">
+        tools:replace="label, icon, theme, name, allowBackup"
+        tools:ignore="UnusedAttribute">
 
 
         <meta-data
