Fix a crashing jobs bug
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,7 +101,7 @@ android {
 
 ext {
     supportLibraryVersion = '28.0.0'
-    workVersion = "1.0.0-alpha11"
+    workVersion = "1.0.0-beta02"
 }
 
 
@@ -116,10 +116,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
     implementation 'com.github.vanniktech.Emoji:emoji-twitter:182e1ff4f4'
     implementation 'org.michaelevans.colorart:library:0.0.3'
-    implementation "android.arch.work:work-runtime:1.0.0-alpha11"
-    implementation "android.arch.work:work-firebase:${workVersion}"
-    androidTestImplementation "android.arch.work:work-testing:1.0.0-alpha11"
-    implementation "android.arch.work:work-rxjava2:1.0.0-alpha13"
+    implementation "android.arch.work:work-runtime:${workVersion}"
+    implementation "android.arch.work:work-rxjava2:${workVersion}"
 
 
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
