Update lint options
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,8 @@ android {
         lintOptions {
             disable 'InvalidPackage'
             disable 'MissingTranslation'
-            disable "ValidController",
-                    "ValidControllerChangeHandler"
+            disable "ValidController"
+            disable "ValidControllerChangeHandler"
         }
     }
 
