Initial file logging
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -99,5 +99,18 @@
         <service
             android:exported="false"
             android:name="com.novoda.merlin.MerlinService" />
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:grantUriPermissions="true"
+            android:exported="false"
+            android:authorities="${applicationId}">
+
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_provider_paths"/>
+
+        </provider>
+
     </application>
 </manifest>
